--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-selector",
-  "version": "0.0.0-development",
+  "version": "0.6.0-mbehr",
   "description": "Convert DataTransfer object to a list of File objects",
   "main": "./dist/index.js",
   "module": "./dist/es5/index.js",
